--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Baltiscript</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap" rel="stylesheet">
@@ -29,12 +29,13 @@
             <h1>You are visiting my <span>(Baltiscript's)</span> website!</h1>
             <br>
             <p>I am an indie game developer, music producer that loves challenges in coding.</p>
-            <p>For example - this website that i'm still learning to develop!</p>
+            <p>For example - this website that i'm still learning to develop!</p>             
         </div>
         <div class="buttons">
             <a href="#" class="projects">Check out my games & projects!</a>
             <a href="#" class="learn-more">Learn more about me!</a>
-        </div>
+        </div> 
+        <img src="src\bear.jpeg" alt="polar bear illustration" class="bear">
     </section>
 
     <footer>
@@ -44,9 +45,10 @@
             <a href="#">About</a>
         </div>
         <div class="footer-right">
-            <a href="#">YT</a>
-            <a href="#">IG</a>
-            <a href="#">TW</a>
+            <a href="#"><i class='bx bxl-youtube'></i></a>
+            <a href="#"><i class='bx bxl-instagram-alt' ></i></a>
+            <a href="#"><i class='bx bxl-twitter' ></i></a>
+            <a href="#"><i class='bx bxl-twitch'></i>></a>
         </div>
     </footer>
 </body>
