Main page remastered
Learnt more HTML and CSS. Redone the main page.

--- a/index.html
+++ b/index.html
@@ -3,53 +3,63 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Baltiscript</title>
+    <meta name="author" content="Orestas Petkus">
+    <meta name="color-scheme" content="dark light">
+    <title>Orestas Petkus</title>
+
+    <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/main.css">
-    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+    <link href="https://fonts.googleapis.com/css2?family=Pixelify+Sans:wght@400..700&display=swap" rel="stylesheet">
+
+    <!-- Style link -->
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div class="wrap">
+        <header>
+            <div class="menu">
+                <a href="#">Home</a>
+                <a href="#">Blog</a>
+                <a href="#">Contact</a>
+            </div>
+        </header>
+        <main>
+            <div class="introduction">
+                <h1>My name is Orestas.</h1>
+                <p>You may know me as <span>Baltiscript</span>.</p>
+                <p><span>A game developer and a music producer.</span></p>
+            </div>
+            <h1>Projects</h1>
+            <div class="horizontal-divider"></div>
+            <div class="content-block">
+                <h2>Unnamed Duck Game</h2>
+                <p><span>A difficult platformer where the controls are simple but takes time to master</span>. 
+                    You are a duck that does not have an ability to fly. 
+                    Help him jump throughout the journey to get a magical golden feather.
+                </p>
+                <p>This project is being made using <a href="https://godotengine.org/" target="_blank">Godot Engine</a>.</p>
 
-    <header class="header">
-        <a href="#" class="logo">Baltiscript</a>
-        <nav class="navbar">
-            <a href="#" class="active">Home</a>
-            <a href="#">Games & Projects</a>
-            <a href="#">About</a>
-        </nav>
-
-        <a href="#" class="contact">Contact me!</a>
-    </header>
-
-    <section class="home">
-        <div class="home-content">
-            <h1 class="greetings">Greetings!</h1>
-            <h1>You are visiting my <span>(Baltiscript's)</span> website!</h1>
-            <br>
-            <p>I am an indie game developer, music producer that loves challenges in coding.</p>
-            <p>For example - this website that i'm still learning to develop!</p>             
-        </div>
-        <div class="buttons">
-            <a href="#" class="projects">Check out my games & projects!</a>
-            <a href="#" class="learn-more">Learn more about me!</a>
-        </div> 
-        <img src="src\bear.jpeg" alt="polar bear illustration" class="bear">
-    </section>
-
-    <footer>
-        <div class="footer-left">
-            <a href="#">Home</a>
-            <a href="#">Games & Projects</a>
-            <a href="#">About</a>
-        </div>
-        <div class="footer-right">
-            <a href="#"><i class='bx bxl-youtube'></i></a>
-            <a href="#"><i class='bx bxl-instagram-alt' ></i></a>
-            <a href="#"><i class='bx bxl-twitter' ></i></a>
-            <a href="#"><i class='bx bxl-twitch'></i>></a>
-        </div>
-    </footer>
+                <div class="images">
+                    <img src="src/index/duck1.png" alt="duck1.png" draggable="false">
+                    <img src="src/index/duck2.png" alt="duck2.png" draggable="false">
+                </div>
+            </div>
+            <div class="horizontal-divider"></div>
+            <div class="content-block">
+                <h2>My website</h2>
+                <p>Simple, yet effective. Used <span>HTML</span> and <span>CSS</span> only. 
+                    Feel free to use the <a href="#">GitHub repo</a> as an example.
+                </p>
+                <div class="images">
+                    <img src="src/index/vscode.png" alt="vscode.png">
+                </div>
+            </div>
+            <div class="horizontal-divider"></div>
+        </main>
+        <footer>
+            <p>Copyright © 2024. All rights reserved</p>
+        </footer>
+    </div>
 </body>
 </html>
