some fixes and style changes

--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
                 <p><span>A game developer and a music producer.</span></p>
             </div>
             <h1>Projects</h1>
-            <div class="horizontal-divider"></div>
             <div class="content-block">
-                <h2>Unnamed Duck Game</h2>
+                <h2>Birdie's Ascend</h2>
+                <p>Game inspired by <a href="https://www.jump-king.com/" target="_blank">Jump King</a>.</p>
                 <p><span>A difficult platformer where the controls are simple but takes time to master</span>. 
                     You are a duck that does not have an ability to fly. 
                     Help him jump throughout the journey to get a magical golden feather.
@@ -45,17 +45,15 @@
                     <img src="src/index/duck2.png" alt="duck2.png" draggable="false">
                 </div>
             </div>
-            <div class="horizontal-divider"></div>
             <div class="content-block">
                 <h2>My website</h2>
                 <p>Simple, yet effective. Used <span>HTML</span> and <span>CSS</span> only. 
-                    Feel free to use the <a href="#">GitHub repo</a> as an example.
+                    Feel free to use the <a href="https://github.com/orestulis05/baltiscript-website-html" target="_blank">GitHub repo</a> as an example.
                 </p>
                 <div class="images">
                     <img src="src/index/vscode.png" alt="vscode.png">
                 </div>
             </div>
-            <div class="horizontal-divider"></div>
         </main>
         <footer>
             <p>Copyright © 2024. All rights reserved</p>
